@@ -50,7 +50,11 @@ test (void)
 int
 main (void)
 {
+  int ret;
+
   test ();
   test (); /* bp.1  */
-  return 0; /* bp.2  */
+
+  ret = 0;
+  return ret; /* bp.2  */
 }
